kubernetes/harbor-registry/ingress-harbor.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ingress
  namespace: harbor-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik

  tls:
    - hosts:
      - harbor.k8s.dmc-it-solutions.cloud
      secretName: harbor-ingress-tls
  rules:
    - host: harbor.k8s.dmc-it-solutions.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: harbor-portal
                port:
                  number: 80
